nginx-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-project-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-project-v2
  template:
    metadata:
      labels:
        app: nginx-project-v2
    spec:
      containers:
        - name: nginx
          image: nginx:1.17.3
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-v2
spec:
  type: NodePort
  selector:
    app: nginx-project-v2
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
